grammar.js
    toplevel: $ => seq($._toplevel, repeat($._toplevel)),
    _toplevel: $ => choice($.operation, $.attribute_alias_def, $.type_alias_def),

    // Common syntax (lang-ref)
    //  digit     ::= [0-9]
    //  hex_digit ::= [0-9a-fA-F]
    //  letter    ::= [a-zA-Z]
    //  id-punct  ::= [$._-]
    //
    //  integer-literal ::= decimal-literal | hexadecimal-literal
    //  decimal-literal ::= digit+
    //  hexadecimal-literal ::= `0x` hex_digit+
    //  float-literal ::= [-+]?[0-9]+[.][0-9]*([eE][-+]?[0-9]+)?
    //  string-literal  ::= `"` [^"\n\f\v\r]* `"`   TODO: define escaping rules
    //
    integer_literal: $ => choice($._decimal_literal, $._hexadecimal_literal),
    _decimal_literal: $ => token(seq(optional(/[-+]/), repeat1(/[0-9]/))),
    _hexadecimal_literal: $ => token(seq('0x', repeat1(/[0-9a-fA-F]/))),
    float_literal: $ => token(seq(
      optional(/[-+]/), repeat1(/[0-9]/), '.', repeat(/[0-9]/),
      optional(seq(/[eE]/, optional(/[-+]/), repeat1(/[0-9]/))))),
    string_literal: $ => token(seq('"', repeat(/[^\\"\n\f\v\r]+/), '"')),
    unit_literal: $ => token('unit'),
    tensor_literal: $ => seq(token(choice('dense', 'sparse')), '<',
      choice(seq($.nested_idx_list, repeat(seq(',', $.nested_idx_list))),
        $._primitive_idx_literal), '>'),
    literal: $ => choice($.integer_literal, $.float_literal, $.string_literal, $.bool_literal,
      $.tensor_literal, $.complex_literal, $.unit_literal),

    _primitive_idx_literal: $ => choice($.integer_literal, $.float_literal,
      $.bool_literal, $.complex_literal),

    // Identifiers
    //   bare-id ::= (letter|[_]) (letter|digit|[_$.])*
    //   bare-id-list ::= bare-id (`,` bare-id)*
    //   value-id ::= `%` suffix-id
    //   suffix-id ::= (digit+ | ((letter|id-punct) (letter|id-punct|digit)*))
    //   alias-name :: = bare-id
    //
    //   symbol-ref-id ::= `@` (suffix-id | string-literal) (`::`
    //   symbol-ref-id)?
    //   value-id-list ::= value-id (`,` value-id)*
    //
    //   // Uses of value, e.g. in an operand list to an operation.
    //   value-use ::= value-id
    //   value-use-list ::= value-use (`,` value-use)*
    bare_id: $ => token(seq(/[a-zA-Z_]/, repeat(/[a-zA-Z0-9_$.]/))),
    value_use: $ => seq('%', $._suffix_id),
    _suffix_id: $ => token(choice(repeat1(/[0-9]/), seq(/[a-zA-Z_$.]/, repeat(/[a-zA-Z0-9_$.]/)))),
    symbol_ref_id: $ => seq('@', choice($._suffix_id, $.string_literal),
      optional(seq('::', $.symbol_ref_id))),
    value_use_list: $ => seq($.value_use, repeat(seq(',', $.value_use))),

    // Operations
    //   operation            ::= op-result-list? (generic-operation |
    //                            custom-operation)
    //                            trailing-location?
    //   generic-operation    ::= string-literal `(` value-use-list? `)`
    //   successor-list?
    //                            region-list? dictionary-attribute? `:`
    //                            function-type
    //   custom-operation     ::= bare-id custom-operation-format
    //   op-result-list       ::= op-result (`,` op-result)* `=`
    //   op-result            ::= value-id (`:` integer-literal)
    //   successor-list       ::= `[` successor (`,` successor)* `]`
    //   successor            ::= caret-id (`:` bb-arg-list)?
    //   region-list          ::= `(` region (`,` region)* `)`
    //   dictionary-attribute ::= `{` (attribute-entry (`,` attribute-entry)*)?
    //                            `}`
    //   trailing-location    ::= (`loc` `(` location `)`)?
    operation: $ => seq(
      field('lhs', optional($.op_result_list)),
      field('rhs', choice($.generic_operation, $.custom_operation)),
      field('location', optional($.trailing_location))),
    op_result_list: $ => seq($.op_result, repeat(seq(',', $.op_result)), '='),
    op_result: $ => seq($.value_use, optional(seq(':', $.integer_literal))),
    successor: $ => seq($.caret_id, optional($._value_arg_list)),
    dictionary_attribute: $ => seq('{', optional($.attribute_entry),
      repeat(seq(',', $.attribute_entry)), '}'),
    block: $ => seq($.block_label, repeat1($.operation)),
    block_label: $ => seq($._block_id, optional($.block_arg_list), ':'),
    _block_id: $ => $.caret_id,
    caret_id: $ => seq('^', $._suffix_id),
    _value_use_and_type: $ => seq($.value_use, optional(seq(':', $.type))),
    _value_use_and_type_list: $ => seq($._value_use_and_type,
      repeat(seq(',', $._value_use_and_type))),
    block_arg_list: $ => seq('(', optional($._value_use_and_type_list), ')'),
    _value_arg_list: $ => seq('(', optional($._value_use_type_list), ')'),
    _value_use_type_list: $ => seq($.value_use_list, ':', $._type_list_no_parens),

    // Regions
    //   region      ::= `{` entry-block? block* `}`
    //   entry-block ::= operation+
    region: $ => seq('{', optional($.entry_block), repeat($.block), '}'),
    entry_block: $ => repeat1($.operation),

    // Types
    //   type ::= type-alias | dialect-type | builtin-type
    //
    //   type-list-no-parens ::=  type (`,` type)*
    //   type-list-parens ::= `(` type-list-no-parens? `)`
    //
    //   // This is a common way to refer to a value with a specified type.
    //   ssa-use-and-type ::= ssa-use `:` type
    //   ssa-use ::= value-use
    //
    //   // Non-empty list of names and types.
    //   ssa-use-and-type-list ::= ssa-use-and-type (`,` ssa-use-and-type)*
    //
    //   function-type ::= (type | type-list-parens) `->` (type |
    //   type-list-parens)
    type: $ => choice($.type_alias, $.dialect_type, $.builtin_type),
    _type_list_no_parens: $ => seq($.type, repeat(seq(',', $.type))),
    _function_return: $ => seq('->', choice($.type, $.type_list_parens)),

    // Type aliases
    //   type-alias-def ::= '!' alias-name '=' type
    //   type-alias ::= '!' alias-name
    builtin_type: $ => choice(
      // TODO: Add opaque_type, function_type
      $.integer_type,
      $.float_type,
      $.complex_type,
      $.index_type,
      $.memref_type,
      $.none_type,
      $.tensor_type,
      $.vector_type,
      $.tuple_type),

    // signed-integer-type ::= `si`[1-9][0-9]*
    // unsigned-integer-type ::= `ui`[1-9][0-9]*
    // signless-integer-type ::= `i`[1-9][0-9]*
    // integer-type ::= signed-integer-type | unsigned-integer-type | signless-integer-type
    integer_type: $ => token(seq(choice('si', 'ui', 'i'), /[1-9]/, repeat(/[0-9]/))),
    float_type: $ => token(choice('f16', 'f32', 'f64', 'f80', 'f128', 'bf16',
      'f8E4M3FN', 'f8E5M2')),
    memref_type: $ => seq(token('memref'), '<',
      field('dimension_list', $.dim_list),
      optional(seq(',', $.attribute_value)),
      optional(seq(',', $.attribute_value)), '>'),
    dim_list: $ => seq($._dim_primitive, repeat(seq('x', $._dim_primitive))),
    _dim_primitive: $ => choice($._prim_type, repeat1($._digit), '?', '*'),

    // tensor-type ::= `tensor` `<` dimension-list type (`,` encoding)? `>`
    // dimension-list ::= (dimension `x`)*
    // dimension ::= `?` | decimal-literal
    // encoding ::= attribute-value
    // tensor-type ::= `tensor` `<` `*` `x` type `>`
    tensor_type: $ => seq(token('tensor'), '<', $.dim_list,
      optional(seq(',', $.tensor_encoding)), '>'),
    attribute_entry: $ => seq(choice($.bare_id, $.string_literal),
      optional(seq('=', $.attribute_value))),
    attribute_value: $ => choice(seq('[', $._attribute_value_nobracket,
      repeat(seq(',', $._attribute_value_nobracket)), ']'), $._attribute_value_nobracket),
    _attribute_value_nobracket: $ => choice($.attribute_alias, $.dialect_attribute,
      $.builtin_attribute, $.dictionary_attribute, $._literal_and_type, $.type),
    attribute: $ => choice($.attribute_alias, $.dialect_attribute,
      $.builtin_attribute, $.dictionary_attribute),

    // Attribute Value Aliases
    //   attribute-alias-def ::= '#' alias-name '=' attribute-value
    //   attribute-alias ::= '#' alias-name
    builtin_attribute: $ => choice(
      // TODO
      $.strided_layout,
      $.affine_map,
    ),
    strided_layout: $ => seq(token('strided'), '<', '[', $._dim_list_comma, ']',
      optional(seq(',', token('offset'), ':', choice($.integer_literal, '?', '*'))), '>'),
    affine_map: $ => seq(token('affine_map'), '<', '(', optional($._loop_indices), ')',
      optional(seq('[', $._loop_index, ']')), '->', '(', optional($._loop_indices), ')', '>'),
    _loop_indices: $ => seq($._loop_index, repeat(seq(choice(',', '+', '-'), $._loop_index))),
    _loop_index: $ => choice($._decimal_literal, token(seq(/[a-zA-Z]/, repeat(/[a-zA-Z0-9]/)))),
    _dim_list_comma: $ => seq($._dim_primitive, repeat(seq(',', $._dim_primitive))),

    // Comment (standard BCPL)
    comment: $ => token(seq('//', /.*/)),

    // TODO: complete
    custom_operation: $ => choice(
      $.builtin_dialect,
      $.func_dialect,
      $.llvm_dialect,
      $.cf_dialect,
      $.arith_dialect,
      $.scf_dialect,
      $.memref_dialect,
      $.tensor_dialect,
      $.linalg_dialect
    ),

    func_dialect: $ => prec.right(choice(
      seq('func.func', $._op_func),

      seq(choice('func.return', 'return'),
        field('attributes', optional($.attribute)),
        field('results', optional($._value_use_type_list)))
    )),

    type_list_attr_parens: $ => choice($.type, seq('(', $.type, optional($.attribute),
      repeat(seq(',', $.type, optional($.attribute))), ')')),
    _op_func: $ => seq(
      field('name', $.symbol_ref_id),
      field('arguments', $.func_arg_list),
      field('return', optional($.func_return)),
      field('attributes', optional(seq(token('attributes'), $.attribute))),
      field('body', optional($.region))),

    cf_dialect: $ => prec.left(choice(
      // operation ::= `cf.br` $dest (`(` $destOperands^ `:` type($destOperands) `)`)? attr-dict
      seq('cf.br',
        field('successor', $.successor),
        field('attributes', optional($.attribute))),

      // operation ::= `cf.cond_br` $condition `,`
      // $trueDest(`(` $trueDestOperands ^ `:` type($trueDestOperands)`)`)? `,`
      // $falseDest(`(` $falseDestOperands ^ `:` type($falseDestOperands)`)`)? attr-dict
      seq('cf.cond_br',
        field('condition', $.value_use), ',',
        field('trueDest', $.successor), ',',
        field('falseDest', $.successor),
        field('attributes', optional($.attribute))),

      // operation ::= `cf.switch` $flag `:` type($flag) `,` `[` `\n`
      //               custom<SwitchOpCases>(ref(type($flag)),$defaultDestination,
      //               $defaultOperands,
      //               type($defaultOperands),
      //               $case_values,
      //               $caseDestinations,
      //               $caseOperands,
      //               type($caseOperands))
      //               `]`
      //               attr-dict
      seq('cf.switch',
        field('flag', $._value_use_and_type), ',', '[',
        $.case_label, $.successor, repeat(seq(',', $.case_label, $.successor)), ']',
        field('attributes', optional($.attribute))),
    )),

    _literal_and_type: $ => seq($.literal, optional(seq(':', $.type))),
    _from_type_to_type: $ => seq(':',
      field('fromtype', $.type), token('to'),
      field('totype', $.type)),
    _from_type_into_type: $ => seq(':',
      field('fromtype', $.type), token('into'),
      field('totype', $.type)),

    _dense_idx_list: $ => seq('[', choice($.integer_literal, $.value_use),
      repeat(seq(',', choice($.integer_literal, $.value_use))), ']'),
    linalg_dialect: $ => choice(
      seq(choice('linalg.batch_matmul', 'linalg.batch_matmul_transpose_b', 'linalg.batch_matvec',
        'linalg.batch_reduce_matmul', 'linalg.conv_1d_ncw_fcw', 'linalg.conv_1d_nwc_wcf',
        'linalg.conv_1d', 'linalg.conv_2d_nchw_fchw', 'linalg.conv_2d_ngchw_fgchw',
        'linalg.conv_2d_nhwc_fhwc', 'linalg.conv_2d_nhwc_hwcf', 'linalg.conv_2d_nhwc_hwcf_q',
        'linalg.conv_2d', 'linalg.conv_3d_ndhwc_dhwcf', 'linalg.conv_3d_ndhwc_dhwcf_q',
        'linalg.conv_3d', 'linalg.copy', 'linalg.depthwise_conv_1d_nwc_wcm',
        'linalg.depthwise_conv_2d_nchw_chw', 'linalg.depthwise_conv_2d_nhwc_hwc',
        'linalg.depthwise_conv_2d_nhwc_hwc_q', 'linalg.depthwise_conv_2d_nhwc_hwcm',
        'linalg.depthwise_conv_2d_nhwc_hwcm_q', 'linalg.depthwise_conv_3d_ndhwc_dhwc',
        'linalg.depthwise_conv_3d_ndhwc_dhwcm', 'linalg.dot', 'linalg.elemwise_binary',
        'linalg.elemwise_unary', 'linalg.fill', 'linalg.fill_rng_2d', 'linalg.matmul',
        'linalg.matmul_transpose_b', 'linalg.matmul_unsigned', 'linalg.matvec', 'linalg.mmt4d',
        'linalg.pooling_nchw_max', 'linalg.pooling_nchw_sum', 'linalg.pooling_ncw_max',
        'linalg.pooling_ncw_sum', 'linalg.pooling_ndhwc_max', 'linalg.pooling_ndhwc_min',
        'linalg.pooling_ndhwc_sum', 'linalg.pooling_nhwc_max', 'linalg.pooling_nhwc_max_unsigned',
        'linalg.pooling_nhwc_min', 'linalg.pooling_nhwc_min_unsigned', 'linalg.pooling_nhwc_sum',
        'linalg.pooling_nwc_max', 'linalg.pooling_nwc_max_unsigned', 'linalg.pooling_nwc_min',
        'linalg.pooling_nwc_min_unsigned', 'linalg.pooling_nwc_sum',
        'linalg.quantized_batch_matmul', 'linalg.quantized_matmul', 'linalg.vecmat'),
        field('attributes', optional($.attribute)),
        'ins', '(', field('ins', $._value_use_type_list), ')',
        'outs', '(', field('outs', $._value_use_type_list), ')',
        optional($._function_return)
      ),

      seq('linalg.generic',
        field('attributes', $.attribute),
        field('ins', seq(token('ins'), '(', $._value_use_type_list, ')')),
        field('outs', seq(token('outs'), '(', $._value_use_type_list, ')')),
        field('body', $.region), optional($._function_return)),

      seq(choice('linalg.map', 'linalg.reduce'),
        field('ins', optional(seq(token('ins'), '(', $._value_use_type_list, ')'))),
        field('outs', seq(token('outs'), '(', $._value_use_type_list, ')')),
        field('arguments', $.block_arg_list),
        field('body', $.region), optional($._function_return)),

      seq('linalg.yield', $._value_use_type_list)
    ),
  }
});
